# xenith

./: Cargo.toml  README.md  STDLIB.md  TYPE.md  map.xen  match.xen  scope.xen  spit.php  test.txt  test.xen
docs/: 01_CORE.md  04_LOOPS.md  05_METHODS.md  10_PATTERN_MATCHING.md  11_ERROR_HANDLING.md  13_BUILT-IN_METHODS.md
src/: context.rs  diagnostics.rs  error.rs  interpreter.rs  json.rs  lexer.rs  lib.rs  lint.rs  main.rs  modules.rs  nodes.rs  parse_result.rs  parser.rs  position.rs  repl.rs  runtime_result.rs  symbol_table.rs  tokens.rs  types.rs  utils.rs  values.rs
stdlib/: collections.xen  dotenv.xen  fs.xen  http.xen  json.xen  math.xen  path.xen  process.xen  random.xen  string.xen  time.xen
testies/: backtick_strings.xen  data.json  echo_test.xen  error_handling.xen  error_position.xen  error_positions.xen  impl_test.xen  iterating_list.xen  json_dedicated.xen  json_from_file.xen  main.xen  map.xen  match.xen  math.xen  method_call.xen  multi_line_import.xen  new_let.xen  scope.xen  simple_type_alias.xen  simple_type_alias2.xen  som.xen  stdlib  string_with_escapes.xen  struct.xen  struct_simple.xen  struct_with_impl.xen  test.xen  test_dotenv.xen  test_fs.xen  test_http.xen  test_json.xen  test_json_any.xen  test_math.xen  test_path.xen  test_process.xen  test_random.xen  test_string.xen  test_time.xen  test_type.xen  test_union.xen  (+4 more)
tests/: error_handling.xen  main.xen  map.xen  math.xen  struct.xen  struct_with_impl.xen  test.xen  test_collections.xen  test_dotenv.xen  test_fs.xen  test_http.xen  test_math.xen  test_path.xen  test_random.xen  (+2 more)
(+50 files in other folders)
