[package]
name = "xenith"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
serde_json = "1.0"
dotenv = "0.15"
once_cell = "1.21.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
rustyline = "14.0"
colored = "2.1"
dirs = "6.0.0"
strsim = "0.11.1"
codespan-reporting = "0.13.1"
termcolor = "1.4.1"
tokio = { version = "1.52.2", features = ["full"] }
tower-lsp = "0.20.0"
dashmap = "6.1.0"

[[bin]]
name = "xenith"
path = "src/main.rs"
